--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,12 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-promise-router": "^4.1.0",
+    "mongoose": "^5.13.0",
+    "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.9"
   }
 }
